# Taskhelper

./: CMakeLists.txt  README.md  main.cpp
include/UI/: mainWIndow.h
include/UI/components/SIde_Bar/: sideBar.h
include/UI/components/SIde_Bar/componets/: BaseNavTree.h  CoreNavigationSection.h  FiltersSection.h  FooterSection.h  PrimaryActionSection.h  ProjectsSection.h
include/UI/components/Top_Menubar/: InfoBar.h  MenuButtonBar.h  NavigationBar.h  topMenubar.h  windowsAction.h
include/UI/helpers/: IconHelper.h
resources/: resources.qrc
src/UI/: mainWindow.cpp
src/UI/componets/Side_Bar/: sideBar.cpp
src/UI/componets/Side_Bar/Components/: CoreNavigationSection.cpp  FiltersSection.cpp  FooterSection.cpp  PrimaryActionSection.cpp  ProjectsSection.cpp
src/UI/componets/Top_Menubar/: MenuButtonBar.cpp  NavigationBar.cpp  infoBar.cpp  windowsAction.cpp
